--- a/src/q6.html
+++ b/src/q6.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Addition Calculator</title>    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Simple Addition Calculator</title>
     <script type="text/javascript">
-        function add(){
-            const num1 = document.querySelector("#num1").value;
-            const num2 = document.querySelector("#num2").value;
-            const answer = num1 + num2;
-            document.querySelector("#answer").innerText = answer;
+      function add() {
+        const num1 = parseFloat(document.querySelector("#num1").value);
+        const num2 = parseFloat(document.querySelector("#num2").value);
+
+        // task 2
+        if (isNaN(num1) || isNaN(num2) || num1 < 0 || num2 < 0) {
+          alert("Please enter only valid num:");
+          return;
         }
+
+        const answer = num1 + num2;
+        document.querySelector("#answer").innerText = answer;
+      }
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- 
         Task 1: Apply type casting to fix this bug inside the add() function.
 
@@ -32,9 +39,11 @@
 
     -->
     <form>
-        <input type="number" placeholder="Number 1" id="num1" /> + <input type="number" placeholder="Number 2" id="num2" /> = <span id="answer"></span>
-        <br />
-        <input type="button" value="Submit" onclick="add()" /> 
+      <input type="number" placeholder="Number 1" id="num1" /> +
+      <input type="number" placeholder="Number 2" id="num2" /> =
+      <span id="answer"></span>
+      <br />
+      <input type="button" value="Submit" onclick="add()" />
     </form>
-</body>
+  </body>
 </html>
